--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-*.js
-!jest.config.js
-*.d.ts
-node_modules
+# Dependency directories
+node_modules/
 
-# CDK asset staging directory
-.cdk.staging
-cdk.out
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
