--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
   "name": "backend",
-  "version": "0.1.0",
-  "bin": {
-    "backend": "bin/backend.js"
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Thomas Hain <thomas.hain@swissmarketplace.group>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.131",
+    "@types/node": "^20.11.7"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "20.11.5",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "aws-cdk": "2.122.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+      "synth": "yarn --cwd cdk cdk synth"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.122.0",
-    "constructs": "^10.0.0"
+    "@aws-sdk/client-dynamodb": "^3.499.0",
+    "@aws-sdk/client-sns": "^3.499.0",
+    "@aws-sdk/util-dynamodb": "^3.499.0"
   }
 }
